--- a/docs/formatdomain.html.in
+++ b/docs/formatdomain.html.in
@@ -3989,7 +3989,7 @@ qemu-kvm -net nic,model=? /dev/null
       &lt;source network='default'/&gt;
       &lt;target dev='vnet1'/&gt;
       &lt;model type='virtio'/&gt;
-      <b>&lt;backend tap='/dev/net/tun' vhost='/dev/net-vhost'/&gt;</b>
+      <b>&lt;backend tap='/dev/net/tun' vhost='/dev/vhost-net'/&gt;</b>
       &lt;driver name='vhost' txmode='iothread' ioeventfd='on' event_idx='off' queues='5'/&gt;
     &lt;/interface&gt;
   &lt;/devices&gt;
