LXC: emphasis uid start of idmap only accept '0' in docs
We don't accept any other values except '0'.

Signed-off-by: Chen Hanxiao <chenhanxiao@cn.fujitsu.com>

--- a/docs/formatdomain.html.in
+++ b/docs/formatdomain.html.in
@@ -315,7 +315,7 @@
 
     <dl>
       <dt><code>start</code></dt>
-      <dd>First user ID in container.</dd>
+      <dd>First user ID in container. It must be '0'.</dd>
       <dt><code>target</code></dt>
       <dd>The first user ID in container will be mapped to this target user
           ID in host.</dd>
