configure: improve misleading libnl3-devel missing error message
When building libvirt from source with netcf-devel installed, the
configure script reports error "libnl-devel >=3.0 is required for
macvtap support", while actually libnl3-devel is required.

Signed-off-by: Shanzhi Yu <shyu@redhat.com>

--- a/configure.ac
+++ b/configure.ac
@@ -2613,7 +2613,11 @@ if test "$with_linux" = "yes"; then
              [whether the netlink v1 library is available])
         ], [
             if test "$with_macvtap" = "yes"; then
-                AC_MSG_ERROR([libnl-devel >= $LIBNL_REQUIRED is required for macvtap support])
+                    if test "$LIBNL_REQUIRED" = "3.0";then
+                        AC_MSG_ERROR([libnl3-devel >= $LIBNL_REQUIRED is required for macvtap support])
+                    else
+                        AC_MSG_ERROR([libnl-devel >= $LIBNL_REQUIRED is required for macvtap support])
+                    fi
             fi
         ])
     fi
