--- a/libvirt.spec.in
+++ b/libvirt.spec.in
@@ -2274,6 +2274,15 @@ exit 0
 %doc examples/systemtap
 
 %changelog
+* Wed Oct  1 2014 Daniel Veillard <veillard@redhat.com> - 1.2.9-1
+- CVE-2014-3657: domain_conf: fix domain deadlock
+- CVE-2014-3633: qemu: blkiotune: Use correct definition when looking up disk
+- Introduce virNodeAllocPages
+- event: introduce new event for tunable values
+- add migration support for OpenVZ driver
+- Add support for fetching statistics of completed jobs
+- many improvements and bug fixes
+
 * Tue Sep  2 2014 Daniel Veillard <veillard@redhat.com> - 1.2.8-1
 - blockcopy: virDomainBlockCopy with XML destination, typed params
 - Introduce API for retrieving bulk domain stats
