--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -519,6 +519,7 @@ DRIVER_SOURCE_FILES = \
 	$(TEST_DRIVER_SOURCES) \
 	$(UML_DRIVER_SOURCES) \
 	$(VBOX_DRIVER_SOURCES) \
+	$(VBOX_NETWORK_DRIVER_SOURCES) \
 	vbox/vbox_tmpl.c \
 	$(VMWARE_DRIVER_SOURCES) \
 	$(XEN_DRIVER_SOURCES) \
@@ -678,9 +679,12 @@ VBOX_DRIVER_SOURCES =						\
 	vbox/vbox_V4_3.c vbox/vbox_CAPI_v4_3.h			\
 	vbox/vbox_V4_3_4.c vbox/vbox_CAPI_v4_3_4.h              \
 	vbox/vbox_common.c vbox/vbox_common.h                   \
-	vbox/vbox_network.c                                     \
 	vbox/vbox_uniformed_api.h                               \
 	vbox/vbox_get_driver.h
+
+VBOX_NETWORK_DRIVER_SOURCES =					\
+	vbox/vbox_driver.c vbox/vbox_driver.h			\
+	vbox/vbox_network.c vbox/vbox_get_driver.h
 
 VBOX_DRIVER_EXTRA_DIST =					\
 		vbox/vbox_tmpl.c vbox/README			\
@@ -1186,8 +1190,9 @@ libvirt_driver_vbox_network_impl_la_CFLAGS =	\
 libvirt_driver_vbox_network_impl_la_LDFLAGS = $(AM_LDFLAGS)
 libvirt_driver_vbox_network_impl_la_LIBADD = $(DLOPEN_LIBS)		\
 		$(MSCOM_LIBS)					\
-		$(LIBXML_LIBS)
-libvirt_driver_vbox_network_impl_la_SOURCES = $(VBOX_DRIVER_SOURCES)
+		$(LIBXML_LIBS)					\
+		libvirt_driver_vbox_impl.la
+libvirt_driver_vbox_network_impl_la_SOURCES = $(VBOX_NETWORK_DRIVER_SOURCES)
 
 libvirt_driver_vbox_storage_impl_la_CFLAGS =	\
 		-I$(top_srcdir)/src/conf	\
