--- a/src/libvirt.pc.in
+++ b/src/libvirt.pc.in
@@ -6,7 +6,7 @@ prefix=@abs_top_builddir@
 exec_prefix=@abs_top_builddir@
 libdir=@abs_top_builddir@/src/.libs
 includedir=@abs_top_builddir@/include
-datarootdir=@abs_top_builddir@
+datarootdir=@abs_top_srcdir@
 
 libvirt_api=@datadir@/docs/libvirt-api.xml
 
