docs: Mention repository locations in contributor guidelines
Signed-off-by: Martin Kletzander <mkletzan@redhat.com>

--- a/docs/hacking.html.in
+++ b/docs/hacking.html.in
@@ -11,6 +11,11 @@
       <li>Discuss any large changes on the mailing list first.  Post patches
         early and listen to feedback.</li>
 
+      <li>Official upstream repository is kept in git
+        (<code>git://libvirt.org/libvirt.git</code>) and is browsable
+        along with other libvirt-related repositories
+        (e.g. libvirt-python) <a href="http://libvirt.org">online</a>.</li>
+
       <li><p>Post patches in unified diff format, with git rename
         detection enabled.  You need a one-time setup of:</p>
 <pre>
