--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -191,6 +191,7 @@ DRIVER_SOURCES =							\
 		libvirt.c libvirt_internal.h				\
 		libvirt-domain.c 					\
 		libvirt-domain-snapshot.c 				\
+		libvirt-host.c 						\
 		libvirt-interface.c	 				\
 		libvirt-network.c	 				\
 		libvirt-nodedev.c	 				\
@@ -2197,6 +2198,7 @@ libvirt_setuid_rpc_client_la_SOURCES = 		\
 		libvirt.c			\
 		libvirt-domain.c		\
 		libvirt-domain-snapshot.c	\
+		libvirt-host.c			\
 		libvirt-interface.c		\
 		libvirt-network.c		\
 		libvirt-nodedev.c		\
