--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -195,6 +195,7 @@ DRIVER_SOURCES =							\
 		libvirt-nodedev.c	 				\
 		libvirt-nwfilter.c	 				\
 		libvirt-secret.c	 				\
+		libvirt-stream.c	 				\
 		locking/lock_manager.c locking/lock_manager.h		\
 		locking/lock_driver.h					\
 		locking/lock_driver_nop.h locking/lock_driver_nop.c	\
@@ -2198,6 +2199,7 @@ libvirt_setuid_rpc_client_la_SOURCES = 		\
 		libvirt-nodedev.c		\
 		libvirt-nwfilter.c		\
 		libvirt-secret.c		\
+		libvirt-stream.c		\
 		libvirt-lxc.c			\
 		$(NULL)
 
