Move virStorage{Pool,Vol} related APIs out of libvirt.c
Introduce a src/libvirt-storage.c file to hold all the
methods related to the virStorage{Pool,Vol} types.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -195,6 +195,7 @@ DRIVER_SOURCES =							\
 		libvirt-nodedev.c	 				\
 		libvirt-nwfilter.c	 				\
 		libvirt-secret.c	 				\
+		libvirt-storage.c	 				\
 		libvirt-stream.c	 				\
 		locking/lock_manager.c locking/lock_manager.h		\
 		locking/lock_driver.h					\
@@ -2199,6 +2200,7 @@ libvirt_setuid_rpc_client_la_SOURCES = 		\
 		libvirt-nodedev.c		\
 		libvirt-nwfilter.c		\
 		libvirt-secret.c		\
+		libvirt-storage.c		\
 		libvirt-stream.c		\
 		libvirt-lxc.c			\
 		$(NULL)
