Move virNetwork related APIs out of libvirt.c
Introduce a src/libvirt-network.c file to hold all the
methods related to the virNetwork type.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -190,6 +190,7 @@ DRIVER_SOURCES =							\
 		$(NODE_INFO_SOURCES)					\
 		libvirt.c libvirt_internal.h				\
 		libvirt-domain-snapshot.c 				\
+		libvirt-network.c	 				\
 		locking/lock_manager.c locking/lock_manager.h		\
 		locking/lock_driver.h					\
 		locking/lock_driver_nop.h locking/lock_driver_nop.c	\
@@ -2188,6 +2189,7 @@ libvirt_setuid_rpc_client_la_SOURCES = 		\
 		datatypes.c			\
 		libvirt.c			\
 		libvirt-domain-snapshot.c	\
+		libvirt-network.c		\
 		libvirt-lxc.c			\
 		$(NULL)
 
