--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -59,6 +59,7 @@ src/internal.h
 src/libvirt.c
 src/libvirt-domain-snapshot.c
 src/libvirt-lxc.c
+src/libvirt-network.c
 src/libvirt-qemu.c
 src/locking/lock_daemon.c
 src/locking/lock_daemon_config.c
