--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -190,6 +190,7 @@ DRIVER_SOURCES =							\
 		$(NODE_INFO_SOURCES)					\
 		libvirt.c libvirt_internal.h				\
 		libvirt-domain-snapshot.c 				\
+		libvirt-interface.c	 				\
 		libvirt-network.c	 				\
 		locking/lock_manager.c locking/lock_manager.h		\
 		locking/lock_driver.h					\
@@ -2189,6 +2190,7 @@ libvirt_setuid_rpc_client_la_SOURCES = 		\
 		datatypes.c			\
 		libvirt.c			\
 		libvirt-domain-snapshot.c	\
+		libvirt-interface.c		\
 		libvirt-network.c		\
 		libvirt-lxc.c			\
 		$(NULL)
