Move virNodeDevice related APIs out of libvirt.c
Introduce a src/libvirt-nodedev.c file to hold all the
methods related to the virNodeDevice type.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -192,6 +192,7 @@ DRIVER_SOURCES =							\
 		libvirt-domain-snapshot.c 				\
 		libvirt-interface.c	 				\
 		libvirt-network.c	 				\
+		libvirt-nodedev.c	 				\
 		libvirt-nwfilter.c	 				\
 		locking/lock_manager.c locking/lock_manager.h		\
 		locking/lock_driver.h					\
@@ -2193,6 +2194,7 @@ libvirt_setuid_rpc_client_la_SOURCES = 		\
 		libvirt-domain-snapshot.c	\
 		libvirt-interface.c		\
 		libvirt-network.c		\
+		libvirt-nodedev.c		\
 		libvirt-nwfilter.c		\
 		libvirt-lxc.c			\
 		$(NULL)
