--- a/libvirt.spec.in
+++ b/libvirt.spec.in
@@ -2254,6 +2254,7 @@ exit 0
 %{_includedir}/libvirt/libvirt-domain-snapshot.h
 %{_includedir}/libvirt/libvirt-interface.h
 %{_includedir}/libvirt/libvirt-network.h
+%{_includedir}/libvirt/libvirt-nodedev.h
 %{_includedir}/libvirt/libvirt-nwfilter.h
 %{_includedir}/libvirt/libvirt-qemu.h
 %{_includedir}/libvirt/libvirt-lxc.h
