Move virStream related APIs out of libvirt.h.in
Create a new libvirt-stream.h file to hold the public
API definitions for the virStream type. This header
file is not self-contained, so applications will not directly
include it. They will continue to #include <libvirt/libvirt.h>

Note the definition of virStreamPtr is not moved, since that
must be declared early for all other libvirt APIs to be able
to reference it.

--- a/include/libvirt/Makefile.am
+++ b/include/libvirt/Makefile.am
@@ -25,6 +25,7 @@ virinc_HEADERS = libvirt.h		\
 		 libvirt-nodedev.h \
 		 libvirt-nwfilter.h \
 		 libvirt-secret.h \
+		 libvirt-stream.h \
 		 libvirt-lxc.h		\
 		 libvirt-qemu.h		\
 		 virterror.h
